--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,7 @@ body {
 
 html {
   font-size: 100%;
+  scrollbar-gutter: stable;
   scroll-behavior: smooth;
 
   /* SCROLL LANDING FIX:
